# openbor-cmake

./: CMakeLists.txt  README.md
modules/: FindOgg.cmake  FindSDL2.cmake  FindVorbis.cmake  FindVorbisFile.cmake
patch/: patch_3.0r4074.diff
